@@ -4594,4 +4594,6 @@ Changelog for GXemul:
 20120617	Adding a patch from James Peacock for ARM MSR fields.
 20120724	Adding a patch from David Brownlee (mkstemp on NetBSD), and
 		trying to make things build without warnings with GCC 4.6.x.
+20120731	Adding a patch from David Brownlee: a more reasonable TOC is
+		returned in dev_dreamcast_gdrom.cc (for NetBSD/dreamcast).
 
